# ChangeLog for dev-java/plexus-archiver
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  09 Jun 2007; kiorky <kiorky@cryptelium.net>
  +plexus-archiver-1.0_alpha9_pre20070602.ebuild, +metadata.xml, +pom.xml:
  Added as a maven dependency, See #181491
