@@ -1,4 +1,4 @@
 DIST plexus-archiver-1.0_alpha9_pre20070602.tar.bz2 137453 RMD160 77160c20105070626bfeb220bc403473382c1631 SHA1 11156d5a2fbfdaecc40cde6d59e52a95474d3651 SHA256 0c009425c47519e4d1a6548dd915df807b73ed1553c495228368ef269883f475
-EBUILD plexus-archiver-1.0_alpha9_pre20070602.ebuild 888 RMD160 26e2bc4e7f30990c908faf0f15123feab8aa1c21 SHA1 f3b73d051951f3679590b3e9ba2ed468874829c3 SHA256 49078c053115e2396c7947fa19f1340d2a8ddaf7938a33bd80740c486948e3d2
-MISC ChangeLog 290 RMD160 014f1a07fb5609472682ffe1d473b4796ab4ccc3 SHA1 7db3dfe61a1dc7631fb0de82e90bd0e51eb03c6a SHA256 857a81f2b7b1c4a1342edcfbfc1647c22fb82f2d50b55341ba89d94711721918
+EBUILD plexus-archiver-1.0_alpha9_pre20070602.ebuild 990 RMD160 a70e743658677bcce7299a1d4255ba9febdfb529 SHA1 a716fe63af3bc523aada161edd26196515345f58 SHA256 41e9683dd32c3b05d081e20cf47aeed84db14ae554109580d4f07e02e6f420d3
+MISC ChangeLog 400 RMD160 ff02ff2671f1b5ef1f28c0fb54494742e40bb317 SHA1 fd33bc8f3aaecdba84f01fb92175075ad4ed6d25 SHA256 4747a5abcc36f8b980b2c68264b2c466f4206223251c320e01693778dc9ed389
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
